B&L QA/objects/POA__c.object
<CustomObject>
    <fields>
        <fullName>Account_Profile__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Profile</label>
        <referenceTo>Account_Profile__c</referenceTo>
        <relationshipLabel>Plan of Action and Weekly Updates</relationshipLabel>
        <relationshipName>POAs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Action__c</fullName>
        <label>Action</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Date_Of_Resource_Requirement__c</fullName>
        <label>Date Of Resource Requirement</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Objective__c</fullName>
        <label>Objective</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Resource_Needed__c</fullName>
        <label>Resource Needed</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Result__c</fullName>
        <label>Result</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>POA</label>
    <nameField>
        <displayFormat>POA-{0000000000}</displayFormat>
        <label>POA Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>POAs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>